# wasm-split-prototype

./: .gitignore  Cargo.toml  build.py  dprint.json  index.html  index.js  raw  test.br
crates/example/: Cargo.toml
crates/example/.cargo/: config.toml
crates/example/src/: lib.rs
crates/wasm_split/: Cargo.toml
crates/wasm_split/src/: lib.rs
crates/wasm_split_cli/: Cargo.toml
crates/wasm_split_cli/src/: dep_graph.rs  emit.rs  main.rs  module_info.rs  read.rs  split_point.rs  todo.txt
crates/wasm_split_macros/src/: lib.rs
