[package]
name = "wasm_split_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.4"
wasm-encoder = { version = "0.206.0", features = ["wasmparser"] }
wasmparser = "0.206.0"
